@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.184 2005/08/01 13:28:30 ph10 Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.185 2005/08/01 13:51:05 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -12,6 +12,10 @@ TK/01 Added the "success_on_redirect" address verification option. See
 PH/01 Added support for SQLite, basic code supplied by David Woodhouse.
 
 PH/02 Patch to exigrep to allow it to work on syslog lines.
+
+PH/03 When creating an mbox file for a virus/spam scan, use fseek() instead of
+      fread() to skip over the body file's header line, because in Cygwin the
+      header line is locked and is inaccessible.
 
 
 Exim version 4.52
